# sailbot

./: .cache.sqlite  .env  .gitignore  README.md  hh.txt  pyproject.toml  requirements.txt
config/: config.yaml
docs/: generate_rosdoc.sh  index.html
docs/cross_reference/sailboat_launch/: objects.inv
docs/cross_reference/sailboat_sensors/: objects.inv
docs/docs/sailboat_interface/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  standards.html
docs/docs/sailboat_launch/: .buildinfo  genindex.html  index.html  modules.html  py-modindex.html  sailboat_launch.html  search.html  searchindex.js  standards.html
docs/docs/sailboat_main/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  sailboat_main.html  sailboat_main.main_algo.html  sailboat_main.main_algo.main_algo.html  sailboat_main.radio.html  sailboat_main.servo.html  sailboat_main.servo.sail_servo.html  sailboat_main.servo.sail_servo_fake.html  sailboat_main.servo.servo_node.html  sailboat_main.trim_sail.html  search.html  searchindex.js  standards.html
docs/docs/sailboat_sensors/: .buildinfo  genindex.html  index.html  modules.html  py-modindex.html  sailboat_sensors.airmar.airmar_node.html  sailboat_sensors.html  (+10 more)
setup/: Dockerfile  README.md  SETUP.md  requirements.txt  setup_ros.sh
src/: index.html
src/cpp_files/: CMakeLists.txt  JANK.cpp  package.xml
src/py_srvcli/: setup.py
src/sailboat_interface/: CMakeLists.txt  package.xml  rosdoc2.yaml
src/sailboat_launch/: package.xml  rosdoc2.yaml  setup.cfg  setup.py
src/sailboat_main/: package.xml  rosdoc2.yaml  setup.cfg  setup.py
src/sailboat_msg/: CMakeLists.txt  package.xml
src/sailboat_navigation/: package.xml  setup.cfg  setup.py
src/sailboat_sensors/: kalman_filter.py  package.xml  rosdoc2.yaml  setup.cfg  setup.py
src/sailboat_vision/: package.xml  setup.cfg  setup.py
src/sailbot_events/: rosdoc2.yaml  setup.cfg  setup.py
src/webserver/: index.html  index2.html  logging.js  main.js  script.js  styles.css  viewer.html  viewerMain.js
sys/: README.md  startup.sh
teensy/: README.md  microcontroller.ino  platformio.ini
teensy/lib/: README
teensy/src/: LEDControl.cpp  LEDControl.hpp  MainControlLoop.cpp  MainControlLoop.hpp  constants.hpp  main.cpp  sfr.cpp  sfr.hpp
(+248 files in other folders)
